--- a/folder_pages/giohang.html
+++ b/folder_pages/giohang.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My account</title>
-    <link rel="stylesheet" href="/folder_style/index.css" />
-    <link rel="stylesheet" href="/folder_style/myaccount.css" />
+    <link rel="stylesheet" href="/folder_style/myaccount.css">
+    <link rel="stylesheet" href="/folder_style/giohang.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -13,71 +13,110 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-    <script
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <script
       src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/7.2.1/esm/ionicons.min.js"
       integrity="sha512-WsL2r6j6Im3HvCp3uuExL45LhU4qwsS4HgVHgti+k/9zXNQnLqiunaxwNxDl+NsLHryCUyGPBw2IV7mGe1Z7nQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-  </head>
-  <body>
+</head>
+<body> 
     <header>
-      <div class="logo">
-        <div>
-          <img
-            style="display: block"
-            width="100px"
-            src="/folder_asset/423737895_1758954421253469_7838479141028168453_n.png"
-            alt=""
+        <div class="logo">
+          <div>
+            <img
+              style="display: block"
+              width="100px"
+              src="/folder_asset/423737895_1758954421253469_7838479141028168453_n.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <a class="menu" href="/folder_utils/index.html" style="text-decoration: none"
+          >Trang chủ</a
+        >
+        <div class="menu-trangchu">
+          <a
+            href="/folder_pages/Nike.html"
+            style="text-decoration: none"
+            class="nameBanner"
+            >Nike
+          </a>
+          <a
+            href="/folder_pages/jodan.html"
+            style="text-decoration: none"
+            class="nameBanner"
+          >
+            Jodan
+          </a>
+          <a
+            href="/folder_pages/hangkhac.html"
+            style="text-decoration: none"
+            class="nameBanner"
+          >
+            Hãng khác
+          </a>
+        </div>
+        <div class="search">
+          <input
+            type="text"
+            id="search"
+            placeholder="nhập tên sản phẩm cần tìm kiếm "
           />
+          <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
+          <a href="/folder_pages/giohang.html">
+            <i class="fa-solid fa-cart-shopping" style="color: #eb7ada"></i
+          ></a>
+          <a href="/folder_pages/dangnhap.html" id="icon-login">
+            <i class="fa-regular fa-user" style="color: #eb7ada"></i
+          ></a>
+        </div>
+      </header>
+    <!-- end header -->
+    <!--start body  -->
+    <section class="giohang">
+      <div class="tong">
+        <div class="thongtinsanpham">
+          <p class="sanpham">SẢN PHẨM</p>
+          <p class="value">GIÁ</p>
+          <p class="soluong">SỐ LƯỢNG</p>
+        </div>
+        <div class="giohangcuaban">
+          <div id="sanpham1">
+          </div>
+          <div id="sanpham2">
+          </div>
         </div>
       </div>
-      <a class="menu" href="/index.html" style="text-decoration: none"
-        >Trang chủ</a
-      >
-      <div class="menu-trangchu">
-        <a
-          href="/folder_pages/Nike.html"
-          style="text-decoration: none"
-          class="nameBanner"
-          >Nike
-        </a>
-        <a
-          href="/folder_pages/jodan.html"
-          style="text-decoration: none"
-          class="nameBanner"
-        >
-          Jodan
-        </a>
-        <a
-          href="/folder_pages/hangkhac.html"
-          style="text-decoration: none"
-          class="nameBanner"
-        >
-          Hãng khác
-        </a>
-      </div>
-      <div class="search">
+    </section>
+
+    <!-- End of Section Giohang-->
+
+    <section class="tongthanhtoan">
+      <div class="left">
+        <label for="magiamgia">Mã giảm giá:</label><br /><br />
         <input
           type="text"
-          id="search"
-          placeholder="nhập tên sản phẩm cần tìm kiếm "
+          id="magiam"
+          name="magiamgia"
+          placeholder="Mã giảm giá"
         />
-        <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
-        <a href="/folder_pages/giohang.html">
-          <i class="fa-solid fa-cart-shopping" style="color: #eb7ada"></i
-        ></a>
-        <a href="/folder_pages/dangnhap.html" id="icon-login">
-          <i class="fa-regular fa-user" style="color: #eb7ada"></i
-        ></a>
+        <button id="gui">Nhập</button>
       </div>
-    </header>
-    <!-- end header -->
+      <div class="righttren">
+        
 
+        <!-- Nút mở trang thanh toán -->
+        <button class="thanhtoan" onclick="motrangthanhtoan()">
+          Thanh toán
+        </button>
+              <div class="khoathongtin">x`
+                <i class="fa-solid fa-lock"></i>
+                <p>Chúng tôi cam kết bảo mật thông tin tài khoản của bạn.</p>
+              </div>
+    </section>
+     <!-- end body  -->
     <!-- Footer -->
     <footer class="footer">
       <div class="wrapper-footer">
@@ -206,6 +245,5 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="/folder_js/index.js"></script>
   </body>
 </html>
