--- a/folder_utils/index.html
+++ b/folder_utils/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My account</title>
+    <title>Trang chủ</title>
     <link rel="stylesheet" href="/folder_style/index.css" />
-    <link rel="stylesheet" href="/folder_style/myaccount.css" />
+    <link rel="stylesheet" href="/folder_js/index.js" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -13,16 +17,52 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/7.2.1/esm/ionicons.min.js"
       integrity="sha512-WsL2r6j6Im3HvCp3uuExL45LhU4qwsS4HgVHgti+k/9zXNQnLqiunaxwNxDl+NsLHryCUyGPBw2IV7mGe1Z7nQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <style>
+      nav {
+        margin-top: 20px;
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+        margin-bottom: 50px;
+      }
+
+      .swiper {
+        width: 100%;
+        height: 500px;
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 500px;
+        object-fit: cover;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -36,7 +76,10 @@
           />
         </div>
       </div>
-      <a class="menu" href="/index.html" style="text-decoration: none"
+      <a
+        class="menu"
+        href="/folder_utils/index.html"
+        style="text-decoration: none"
         >Trang chủ</a
       >
       <div class="menu-trangchu">
@@ -76,9 +119,77 @@
         ></a>
       </div>
     </header>
-    <!-- end header -->
+    <br />
+    <hr />
+    <nav>
+      <br />
+      <h3>Top sản phẩm bán chạy</h3>
+      <br />
+      <div iv class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img
+              src="/folder_asset/giày tạp nham/z5120905308989_f28ac7d6781fc9aae5e132b1720fbc8d.jpg"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="/folder_asset/jodan/z5194704638355_b6a97057a646cf93ef3d9e3dec0d796a.jpg"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="/folder_asset/giày tạp nham/z5225571278241_1e9e0fc21b8fdcb6f8c5a6183130f5d8.jpg"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="/folder_asset/nike/z5242687962690_7605e90d3b70fcef4d1c8a2fdcd57d85.jpg"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="/folder_asset/nike/z5210671046321_d5bc5d0dfbd481d18c5aea1668d95990.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </nav>
+    <!-- hết phần nav -->
 
-    <!-- Footer -->
+    <div class="main">
+      <section class="nike_category">
+        <div class="tieude2" id="nike_category_title">
+          <h3>Nike</h3>
+        </div>
+        <div id="nike-section"></div>
+      </section>
+      <!-- hết giày nike -->
+
+      <section class="jodan_category">
+        <div class="tieude2" id="jodan_category_title">
+          <h3>Jodan</h3>
+        </div>
+        <div id="jodan-section"></div>
+      </section>
+
+      <!-- hết giày jd -->
+      <section class="hangkhac_category">
+        <div class="tieude2" id="hangkhac_category_title">
+          <h3>Hãng khác</h3>
+        </div>
+        <div id="hangkhac-section"></div>
+      </section>
+      <!-- hết hãng khác -->
+    </div>
+    <br />
+    <hr />
     <footer class="footer">
       <div class="wrapper-footer">
         <div class="block1">
