--- a/folder_pages/login.html
+++ b/folder_pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/folder_style/dangnhap.css">
+    <link rel="stylesheet" href="/folder_style/login.css">
     <link rel="stylesheet" href="/folder_style/index.css">
     <link
       rel="stylesheet"
@@ -42,34 +42,36 @@
       >
       <div class="menu-trangchu">
         <a
-          href="/folder_pages/Nike.html"
+          href="/folder_pages/procduct.html"
           style="text-decoration: none"
           class="nameBanner"
-          >Nike AF1
+          >Sản phẩm
         </a>
         <a
-          href="/folder_pages/jodan.html"
+          href="/folder_pages/we.html"
           style="text-decoration: none"
           class="nameBanner"
         >
-          Jodan
+          Về chúng tôi 
         </a>
         <a
-          href="/folder_pages/hangkhac.html"
+          href="/folder_pages/phone.html"
           style="text-decoration: none"
           class="nameBanner"
         >
-          Nike Max
+          liên hệ 
         </a>
       </div>
       <div class="search">
-        <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
-        <a href="/folder_pages/giohang.html">
+        <a href="/folder_pages/procduct.html">
+          <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
+        </a>
+        <a href="/folder_pages/cart.html" id="iconGioHang">
           <i class="fa-solid fa-cart-shopping" style="color: #eb7ada"></i
         ></a>
-        <span id="icon-login">
+        <a id="icon-login">
           <i class="fa-regular fa-user" style="color: #eb7ada"></i>
-        </span>
+        </a>
       </div>
     </header>
     <!-- Main-->
@@ -179,109 +181,113 @@
       
     <!-- Footer -->
     <footer class="footer">
-        <div class="wrapper-footer">
-          <div class="block1">
-            <div class="logo-footer">
-              <img src="/folder_asset/423737895_1758954421253469_7838479141028168453_n.png" style="height: 100px;" alt="">
-            </div>
-            <p>
-              Website chuyên cung cấp phẩm giá sỉ lẻ phân khối<br />
-              toàn quốc, khách hàng có nhu cầu vui lòng đặt <br />
-              hàng để chúng tôi kiểm kho và báo lại sớm nhất. <br />
-              Ngoài ra chúng tôi còn cung cấp hàng sỉ lẻ khi <br />
-              đặt số lượng lớn.<br />
-            </p>
+      <div class="wrapper-footer">
+        <div class="block1">
+          <div class="logo-footer">
+            <img
+              src="/folder_asset/423737895_1758954421253469_7838479141028168453_n.png"
+              style="height: 100px"
+              alt=""
+            />
           </div>
-  
-          <div class="links-container">
-            <h4>YHL store</h4>
-  
+          <p>
+            Website chuyên cung cấp phẩm giá sỉ lẻ phân khối<br />
+            toàn quốc, khách hàng có nhu cầu vui lòng đặt <br />
+            hàng để chúng tôi kiểm kho và báo lại sớm nhất. <br />
+            Ngoài ra chúng tôi còn cung cấp hàng sỉ lẻ khi <br />
+            đặt số lượng lớn.<br />
+          </p>
+        </div>
+
+        <div class="links-container">
+          <h4>YHL store</h4>
+
+          <ul>
+            <li>
+              <a href="/folder_utils/index.html">Trang chủ </a>
+            </li>
+            <li>
+              <a href="/folder_pages/procduct.html">sản phẩm </a>
+            </li>
+            <li>
+              <a href="/folder_pages/we.html">về chúng tôi </a>
+            </li>
+            <li>
+              <a href="/folder_pages/phone.html"> liên hệ </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="chinhsach">
+          <h4>Chính sách</h4>
+
+          <ul>
+            <li>
+              <a href="#">Chính sách bảo mật</a>
+            </li>
+            <li>
+              <a href="#"> Chính sách vận chuyển</a>
+            </li>
+            <li>
+              <a href="#"> Chính sách đổi trả</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="lienhe">
+          <h4>Liên hệ với chúng tôi</h4>
+
+          <ul>
+            <li>
+              <p>Tạp hóa YHL Store</p>
+            </li>
+
+            <li>
+              <p>Người đại diện: Nguyễn Thành Nam</p>
+            </li>
+
+            <li>
+              <p>
+                Địa chỉ: Đường Thanh Bình , Mộ Lao , Hà Đông
+                <br />
+                và Trực Ninh , Nam Định
+              </p>
+            </li>
+
+            <li>
+              <p>Điện thoại: 02839369142</p>
+            </li>
+
+            <li>
+              <p>Email: namnguyen@gmail.com</p>
+            </li>
+
+            <li>
+              <p>MSDN: 0102289856 cấp ngày 23/05/2007 tại Hà Nội</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="follow-container">
+          <div class="follow">
+            <h4>Theo dõi chúng tôi tại:</h4>
+          </div>
+          <div class="icon">
             <ul>
               <li>
-                <a href="#">Trang chủ </a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#">Tạp hóa </a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
               </li>
               <li>
-                <a href="#">Thời trang</a>
-              </li>
-              <li>
-                <a href="#">Điện tử </a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
               </li>
             </ul>
-          </div>
-  
-          <div class="chinhsach">
-            <h4>Chính sách</h4>
-  
-            <ul>
-              <li>
-                <a href="#">Chính sách bảo mật</a>
-              </li>
-              <li>
-                <a href="#"> Chính sách vận chuyển</a>
-              </li>
-              <li>
-                <a href="#"> Chính sách đổi trả</a>
-              </li>
-            </ul>
-          </div>
-  
-          <div class="lienhe">
-            <h4>Liên hệ với chúng tôi</h4>
-  
-            <ul>
-              <li>
-                <p>Tạp hóa YHL Store</p>
-              </li>
-  
-              <li>
-                <p>Người đại diện: Nguyễn Thành Nam </p>
-              </li>
-  
-              <li>
-                <p>
-                  Địa chỉ: Đường Thanh Bình , Mộ Lao , Hà Đông 
-                  <br />
-                  và Trực Ninh , Nam Định
-                </p>
-              </li>
-  
-              <li>
-                <p>Điện thoại: 02839369142</p>
-              </li>
-  
-              <li>
-                <p>Email: namnguyen@gmail.com</p>
-              </li>
-  
-              <li>
-                <p>MSDN: 0102289856 cấp ngày 23/05/2007 tại Hà Nội</p>
-              </li>
-            </ul>
-          </div>
-  
-          <div class="follow-container">
-            <div class="follow">
-              <h4>Theo dõi chúng tôi tại:</h4>
-            </div>
-            <div class="icon">
-              <ul>
-                <li>
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                </li>
-              </ul>
-            </div>
           </div>
         </div>
-      </footer>
-      <script src="/folder_js/dangnhap.js"></script>
+      </div>
+    </footer>
+      <script src="/folder_js/login.js"></script>
 </body>
 </html>
