--- a/folder_pages/myaccount.html
+++ b/folder_pages/myaccount.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My account</title>
-    <link rel="stylesheet" href="/folder_style/index.css">
     <link rel="stylesheet" href="/folder_style/myaccount.css">
     <link
       rel="stylesheet"
@@ -41,34 +40,36 @@
     >
     <div class="menu-trangchu">
       <a
-        href="/folder_pages/Nike.html"
+        href="/folder_pages/procduct.html"
         style="text-decoration: none"
         class="nameBanner"
-        >Nike AF1
+        >Sản phẩm
       </a>
       <a
-        href="/folder_pages/jodan.html"
+        href="/folder_pages/we.html"
         style="text-decoration: none"
         class="nameBanner"
       >
-        Jodan
+        Về chúng tôi 
       </a>
       <a
-        href="/folder_pages/hangkhac.html"
+        href="/folder_pages/phone.html"
         style="text-decoration: none"
         class="nameBanner"
       >
-        Nike Max
+        Liên hệ
       </a>
     </div>
     <div class="search">
-      <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
-      <a href="/folder_pages/giohang.html">
+      <a href="/folder_pages/procduct.html">
+        <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
+      </a>
+      <a href="/folder_pages/cart.html" id="iconGioHang">
         <i class="fa-solid fa-cart-shopping" style="color: #eb7ada"></i
       ></a>
-      <span id="icon-login">
+      <a id="icon-login">
         <i class="fa-regular fa-user" style="color: #eb7ada"></i>
-      </span>
+      </a>
     </div>
   </header>
   <!-- end header -->
@@ -115,7 +116,7 @@
               <path d="M9.75 12.0156H20.2472" stroke="#131313" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M9.75 19.7822H4.5C4.30109 19.7822 4.11032 19.7078 3.96967 19.5754C3.82902 19.443 3.75 19.2634 3.75 19.0762V4.95508C3.75 4.76782 3.82902 4.58823 3.96967 4.45582C4.11032 4.32341 4.30109 4.24902 4.5 4.24902H9.75" stroke="#131313" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <span ><a href="./dangki.html" style="margin-left: 10px; color:#000000;">Đăng kí</a></span>
+            <span ><a href="/folder_pages/register.html" style="margin-left: 10px; color:#000000;">Đăng kí</a></span>
           </div>
           <div class="icon-logout">
 
@@ -231,16 +232,16 @@
 
           <ul>
             <li>
-              <a href="/folder_utils/index.html" style="text-decoration: none">Trang chủ </a>
+              <a href="/folder_utils/index.html">Trang chủ </a>
             </li>
             <li>
-              <a href="/folder_pages/Nike.html">Nike </a>
+              <a href="/folder_pages/procduct.html">sản phẩm </a>
             </li>
             <li>
-              <a href="/folder_pages/jodan.html">Jodan</a>
+              <a href="/folder_pages/we.html">về chúng tôi </a>
             </li>
             <li>
-              <a href="/folder_pages/hangkhac.html"> Hàng khác </a>
+              <a href="/folder_pages/phone.html"> liên hệ </a>
             </li>
           </ul>
         </div>
