--- a/folder_pages/procduct.html
+++ b/folder_pages/procduct.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AIR Max</title>
-    <link rel="stylesheet" href="/folder_style/air.css" />
+    <title>All Products</title>
+    <link rel="stylesheet" href="/folder_style/product.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -43,46 +43,57 @@
       >
       <div class="menu-trangchu">
         <a
-          href="/folder_pages/Nike.html"
+          href="/folder_pages/procduct.html"
           style="text-decoration: none"
           class="nameBanner"
-          >Nike AF1
+          >sản phẩm
         </a>
         <a
-          href="/folder_pages/jodan.html"
+          href="/folder_pages/we.html"
           style="text-decoration: none"
           class="nameBanner"
         >
-          Jodan
+          Về chúng tôi
         </a>
         <a
-          href="/folder_pages/hangkhac.html"
+          href="/folder_pages/phone.html"
           style="text-decoration: none"
           class="nameBanner"
         >
-          Nike Max
+          liên hệ
         </a>
       </div>
       <div class="search">
-        <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
-        <a href="/folder_pages/giohang.html">
+        <span>
+          <input
+            type="text"
+            id="search"
+            placeholder="Nhập từ khóa tìm kiếm"
+            onchange="searchProduct()"
+          />
+          <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
+        </span>
+        <a href="/folder_pages/cart.html" id="iconGioHang">
           <i class="fa-solid fa-cart-shopping" style="color: #eb7ada"></i
         ></a>
-        <span id="icon-login">
+        <a id="icon-login">
           <i class="fa-regular fa-user" style="color: #eb7ada"></i>
-        </span>
+        </a>
       </div>
     </header>
-    <!-- end header -->
-    <section class="hangkhac_category">
-      <div class="tieude2" id="hangkhac_category_title">
-        <h3>AIR Max</h3>
+
+    <section class="allProduct_category">
+      <div class="tieude2">
+        <h3>All Products</h3>
       </div>
-      <div id="hangkhac-section"></div>
+      <div id="allProduct-section"></div>
     </section>
-    <div class="pagination"></div>
     <br />
     <!-- chuyen trang -->
+    <div class="pagination"></div>
+    <!-- kt main -->
+    <br />
+    <hr />
     <!-- Footer -->
     <footer class="footer">
       <div class="wrapper-footer">
@@ -113,21 +124,21 @@
               </a>
             </li>
             <li>
-              <a href="/folder_pages/Nike.html" style="text-decoration: none"
-                >Nike
+              <a href="/folder_pages/procduct.html" style="text-decoration: none"
+                >sản phẩm
               </a>
             </li>
             <li>
-              <a href="/folder_pages/jodan.html" style="text-decoration: none"
-                >Jodan</a
+              <a href="/folder_pages/we.html" style="text-decoration: none"
+                >về chúng tôi</a
               >
             </li>
             <li>
               <a
-                href="/folder_pages/hangkhac.html"
+                href="/folder_pages/phone.html"
                 style="text-decoration: none"
               >
-                AIR Max
+                liên hệ
               </a>
             </li>
           </ul>
@@ -224,6 +235,16 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="/folder_js/hangkhac.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/folder_js/product.js"></script>
   </body>
 </html>
