--- a/folder_pages/register.html
+++ b/folder_pages/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đăng kí</title>
     <link rel="stylesheet" href="/folder_style/index.css" />
-    <link rel="stylesheet" href="/folder_style/dangky.css" />
+    <link rel="stylesheet" href="/folder_style/register.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -44,34 +44,36 @@
       >
       <div class="menu-trangchu">
         <a
-          href="/folder_pages/Nike.html"
+          href="/folder_pages/procduct.html"
           style="text-decoration: none"
           class="nameBanner"
-          >Nike AF1
+          >Sản phẩm
         </a>
         <a
-          href="/folder_pages/jodan.html"
+          href="/folder_pages/we.html"
           style="text-decoration: none"
           class="nameBanner"
         >
-          Jodan
+          Về chúng tôi
         </a>
         <a
-          href="/folder_pages/hangkhac.html"
+          href="/folder_pages/phone.html"
           style="text-decoration: none"
           class="nameBanner"
         >
-          Nike Max
+          liên hệ
         </a>
       </div>
       <div class="search">
-        <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
-        <a href="/folder_pages/giohang.html">
+        <a href="/folder_pages/procduct.html">
+          <i class="fa-solid fa-magnifying-glass" style="color: #eb7ada"></i>
+        </a>
+        <a href="/folder_pages/cart.html" id="iconGioHang">
           <i class="fa-solid fa-cart-shopping" style="color: #eb7ada"></i
         ></a>
-        <span id="icon-login">
+        <a id="icon-login" href="./login.html">
           <i class="fa-regular fa-user" style="color: #eb7ada"></i>
-        </span>
+        </a>
       </div>
     </header>
     <div class="hello">YHL, xin chào!</div>
@@ -186,10 +188,7 @@
         <div class="mui-z-index">
           <i class="fa-solid fa-g"></i>
         </div>
-        <button type="submit" class="btn">
-          đăng kí
-          <!-- <a class="dangki" href="/html/dangnhap.html">Đăng ký</a> -->
-        </button>
+        <button type="submit" class="btn">đăng kí</button>
       </div>
     </form>
     <footer class="footer">
@@ -300,6 +299,6 @@
         </div>
       </div>
     </footer>
-    <script src="/folder_js/dangki.js"></script>
+    <script src="/folder_js/register.js"></script>
   </body>
 </html>
