--- a/folder_utils/admin.html
+++ b/folder_utils/admin.html
@@ -12,7 +12,7 @@
       <input class="display" type="text" placeholder="id" id="id" />
       <input class="display" type="text" placeholder="category" id="category" />
       <input class="display" type="text" placeholder="Tên sản phẩm" id="name" />
-      <input class="display" type="text" placeholder="Img url" id="img_url" />
+      <input class="display" type="file" placeholder="Img url" id="img_url" />
       <input class="display" type="text" placeholder="price" id="price" />
       <button
         style="background-color: rgb(67, 192, 234); width: 100px; height: 50px"
