--- a/folder_pages/trangsanpham.html
+++ b/folder_pages/trangsanpham.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chi tiết sản phẩm </title>
+    <title>Chi tiết sản phẩm</title>
+    <link rel="stylesheet" href="/folder_style/trangsanpham.css" />
   </head>
   <body>
     <header>
@@ -17,6 +18,7 @@
           />
         </div>
       </div>
+
       <a
         class="menu"
         href="/folder_utils/index.html"
@@ -59,113 +61,131 @@
     </header>
 
     <section class="wrapper-section1">
-        <div class="section1">
-          <div class="image">
-            <img
-              src="/img/33.png"
-              style="height: 513px; width: 513"
-              alt="photo"
-            />
-          </div>
-          <div class="right1">
-            <h2>
-              NƯỚC TẨY TRANG MICELLAR <br />
-              WATER CHO DA NHẠY CẢM<br />
-              400ML
-            </h2>
-            <p class="text">
-              GIÚP LẤY ĐI LỚP TRANG ĐIỂM, BÃ NHỜN VÀ <br />
-              CÁC HẠT BỤI SIÊU NHỎ TRÊN LÀN DA
-            </p>
-            <p class="value">₫ XXX,000</p>
-            <p class="danhgia">Đánh giá:</p>
-            <div class="rating">
-              <input type="radio" id="star5" name="rating" value="5">
-              <label for="star5">☆</label>
-              <input type="radio" id="star4" name="rating" value="4">
-              <label for="star4">☆</label>
-              <input type="radio" id="star3" name="rating" value="3">
-              <label for="star3">☆</label>
-              <input type="radio" id="star2" name="rating" value="2">
-              <label for="star2">☆</label>
-              <input type="radio" id="star1" name="rating" value="1">
-              <label for="star1">☆</label>
-          </div>
-          </div>
+      <div class="section1">
+        <div class="image">
+          <img
+            src="/img/33.png"
+            style="height: 513px; width: 513"
+            alt="photo"
+          />
         </div>
-      </section>
-  
-      <!-- End of Section1 -->
-  
-      <div class="thongtin">
-        <h4>Mô tả sản phẩm:</h4>
-        <p>
-          Nước tẩy trang giàu khoáng cho da nhạy cảm La Roche-Posay Micellar Water
-          Ultra Sensitive Skin<br />
-          400ml với công nghệ cải tiến Glyco Micellar mang lại hiệu quả làm sạch
-          sâu vượt trội, giúp lấy đi lớp<br />
-          trang điểm, bã nhờn và các hạt bụi siêu nhỏ có trong khói xe và môi
-          trường ô nhiễm nhưng vẫn an<br />
-          toàn cho làn da nhạy cảm.<br />
-          Thành phần giàu GLYCERIN giúp dưỡng ẩm làm mềm da, giảm ma sát tối đa
-          khi làm sạch & nước <br />
-          khoáng La Roche-Posay làm dịu da, giảm kích ứng và chống oxi hóa. Sản
-          phẩm phù hợp để tẩy trang<br />
-          cho vùng mặt, mắt và môi.
-        </p>
-        <h4>Loại da phù hợp:</h4>
-        <p>- Phù hợp cho da nhạy cảm.</p>
-        <h4>Độ an toàn:</h4>
-        <p>
-          - Không paraben/ Không chất tạo màu/ Không cồn xà phòng.<br />
-          - Duy trì độ pH tự nhiên của da nên an toàn với mọi loại da, kể cả da
-          nhạy cảm.
-        </p>
-        <h4>Thành phần:</h4>
-        <p>
-          - Công nghệ cải tiến Glyco Micellar mang lại hiệu quả làm sạch sâu vượt
-          trội.<br />
-          - GLYCERIN giúp dưỡng ẩm và làm mềm da.<br />
-          - Nước khoáng La Roche-Posay có tính năng làm dịu da, giảm kích ứng và
-          chống oxi hóa.
-        </p>
-        <h4>Công dụng:</h4>
-        <p>
-          - Làm sạch đến 99% lớp trang điểm, 70% mascara và các hạt bụi siêu nhỏ
-          có trong khói xe và môi <br />
-          trường ô nhiễm chỉ sau một lượt bông cotton.<br />
-          - Cung cấp độ ẩm và giảm ma sát tối đa khi làm sạch.<br />
-          - Chống o.xy hóa, giúp bảo vệ da trước môi trường ô nhiễm.
-        </p>
-        <h4>Hướng dẫn sử dụng:</h4>
-        <p>
-          - Dùng bông cotton thoa sản phẩm lên mặt, mắt và môi.<br />
-          - Không cần rửa lại bằng nước.
-        </p>
-        <h4>Hướng dẫn bảo quản:</h4>
-        <p>- Nơi thoáng mát, tránh ánh nắng mặt trời trực tiếp.</p>
-        <h4>Đánh giá của khách hàng:</h4>
-        <div class="danhgiacuakh">
-          <div class="kh">
-            <button class="hinhanh"><i class="fa-regular fa-image"></i></button>
-            <p class="name">mththu307</p>
-          </div>
-          <div class="rating2">
-            <input type="radio" id="star5" name="rating" value="5">
+        <div class="right1">
+          <h2>
+            NƯỚC TẨY TRANG MICELLAR <br />
+            WATER CHO DA NHẠY CẢM<br />
+            400ML
+          </h2>
+          <p class="text">
+            với thiết kế đẹp, tinh tế & màu sắc vô cùng dễ phối đồ. Vậy nên đôi
+            <br />
+            giày này trở nên phổ biến, mang tính biểu tượng và được rất nhiều
+            <br />
+            giới trẻ yêu thích.
+          </p>
+          <p class="value">₫ XXX,000</p>
+          <p class="danhgia">Đánh giá:</p>
+          <div class="rating">
+            <input type="radio" id="star5" name="rating" value="5" />
             <label for="star5">☆</label>
-            <input type="radio" id="star4" name="rating" value="4">
+            <input type="radio" id="star4" name="rating" value="4" />
             <label for="star4">☆</label>
-            <input type="radio" id="star3" name="rating" value="3">
+            <input type="radio" id="star3" name="rating" value="3" />
             <label for="star3">☆</label>
-            <input type="radio" id="star2" name="rating" value="2">
+            <input type="radio" id="star2" name="rating" value="2" />
             <label for="star2">☆</label>
-            <input type="radio" id="star1" name="rating" value="1">
+            <input type="radio" id="star1" name="rating" value="1" />
             <label for="star1">☆</label>
-        </div>
-          <p class="danhgiakh">Sản phẩm dùng oke la</p>
+          </div>
         </div>
       </div>
+    </section>
 
+    <!-- End of Section1 -->
+
+    <div class="thongtin">
+      <h4>Mô tả sản phẩm:</h4>
+      <p>
+        SHOP ĐẢM BẢO và CAM KẾT CHO CÁC BẠN 🍓 Về sản phẩm: Shop cam kết cả về
+        chất lượng và kiểu dáng. Tất cả ảnh đều không chỉnh sửa. 99% là sản phẩm
+        đúng như ảnh 1% là do khách hàng quá đẹp trai, hihi. 🍓 Dịch vụ: Hỗ trợ
+        đổi hàng nếu các bạn đi không vừa. 🍓 Thời gian chuẩn bị hàng: hàng luôn
+        có sẵn nên cứ đặt là sẽ đóng gói gửi bạn ạ <br />
+        ----------------------------------------------
+        ----------------------------------------------- <br />
+        Thông tin sản phẩm ✔️Thương hiệu: NO BRAND <br />
+        ✔️Kích thước: 36 37 38 39 40 41 42 43 45 <br />
+        ✔️Phongcách: Giày thể thao nam cao cổ, thời trang thích hợp đi chơi, đi
+        học <br />
+        ✔️Màu sắc: Giày nam bên mình có phối màu đen trắng và xám xanh trắng
+        <br />
+        ✔️Mùa thích hợp: đã là thời trang thì phá tan thời tiết 4 mùa mua nào đi
+        <br />
+        cũng hợp ạ <br />
+        ✔️Với phong cách trẻ trung năng động sản phẩm Giày nam JD các bạn có thể
+        <br />
+        phối với các loại quần: quần bò, quần lửng, quần kaki, quần jogger rất
+        <br />
+        đẹp và ngầu ạ <br />
+        ✔️Chất liệu làm nên đôi giày là da PU thoáng không bí chân và vải được
+        <br />
+        dệt may chuẩn xác và được shop cắt chỉ thừa và đóng gói cẩn thận ạ
+        <br />
+        ✔️Đối tượng áp dụng: 1 – 100 tuổi, đam mê là bất tận ạ ✔️Đế giày thể
+        <br />
+        thao nam: làm từ chất liệu cao su non, êm, đàn hồi, bên trong có lót trợ
+        <br />
+        lực rất êm ái và giúp hạn chế mồ hôi tốt. ✔️ Freeship/hỗ trợ phí vận
+        <br />
+        chuyển (khách không biết lấy mã miễn phí vận chuyển / inbox cho shop để
+        <br />
+        được hướng dẫn) <br />
+        ❌ KHUYẾN CÁO <br />
+        ❌ Với bất kỳ 1đôi GIÀY NAM nào bạn đều nên hạn chế để giày bị tiếp xúc
+        <br />
+        trực tiếp với nhiệt độ nóng và ngâm nước mưa lâu khi phơi giày, bạn nên
+        <br />
+        dùng giấy vệ sinh bao bọc bề mặt giày <br />
+        -------------------------------------------------------------------------
+        <br />
+        Shop luôn cập nhật những xu hướng mẫu GIÀY SNEAKER NAM mới nhất, độc
+        <br />
+        nhất trên thị trường. Các đôi giày nam thể thao cá tính và mang đậm
+        <br />
+        phong cách HIGH SCHOOL SNEAKER ạ! Cảm ơn các bạn mua hàng rất nhiều, nhớ
+        <br />
+        đánh giá 5 sao giúp shop nha. 🚛 Ship toàn quốc - Giao hàng tận nơi -
+        <br />
+        Cảm ơn quý khách đã ghé thăm và ủng hộ Shop. Vui lòng ấn "Theo dõi" để
+        <br />
+        cập nhật những sản phẩm của shop, giá rẻ mới nhất nhé! #giaythethaonu
+        <br />
+        #giaythethaonam #giaynu #giaynam #giaythethaonutrang #giaythethao <br />
+        #giaysneakertrang #giaydep #giayaf1trang #giaythethaotrang <br />
+        #giaysneakercothap #giaydihoc #giaysneakernam #giaysneakernu <br />
+        #giaynucothap #giaynamcothap #af1 #giayairforce1 <br />
+      </p>
+      <br />
+      <div class="danhgiacuakh">
+        <div class="kh">
+          <button class="hinhanh"><i class="fa-regular fa-image"></i></button>
+          <p class="name">mththu307</p>
+        </div>
+        <div class="rating2">
+          <input type="radio" id="star5" name="rating" value="5" />
+          <label for="star5">☆</label>
+          <input type="radio" id="star4" name="rating" value="4" />
+          <label for="star4">☆</label>
+          <input type="radio" id="star3" name="rating" value="3" />
+          <label for="star3">☆</label>
+          <input type="radio" id="star2" name="rating" value="2" />
+          <label for="star2">☆</label>
+          <input type="radio" id="star1" name="rating" value="1" />
+          <label for="star1">☆</label>
+        </div>
+        <p class="danhgiakh">Sản phẩm dùng oke la</p>
+      </div>
+    </div>
+    <!-- end main -->
     <footer class="footer">
       <div class="wrapper-footer">
         <div class="block1">
